force-app/main/default/objects/custom_create197__c/custom_create197__c.object-meta.xml
<CustomObject>
    <label>Custom created object197</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects197</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>