force-app/main/default/objects/custom_create197__c/fields/custom_create_197field541__c.field-meta.xml
<CustomField>
    <fullName>custom_create_197field541__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 197field541</label>
    <type>Checkbox</type>
</CustomField>