force-app/main/default/objects/custom_create197__c/fields/custom_create_197field601__c.field-meta.xml
<CustomField>
    <fullName>custom_create_197field601__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 197field601</label>
    <type>Checkbox</type>
</CustomField>